# fastApiProject-mock-apis

./: README.md  main.py  pyproject.toml
