[tool.poetry]
name = "fastapiproject"
version = "0.1.0"
description = ""
authors = ["JohnR46 <machine.The@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.112.2"
uvicorn = "^0.30.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
